--- a/application/package.json
+++ b/application/package.json
@@ -12,6 +12,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "fabric-network": "^2.2.0",
+    "formidable": "^1.2.2",
     "magnet-uri": "^5.3.0",
     "pug": "^3.0.0"
   },
