--- a/blockchain/contract/package.json
+++ b/blockchain/contract/package.json
@@ -1,6 +1,6 @@
 {
     "name": "biobank",
-    "version": "16.0.0",
+    "version": "12.0.0",
     "description": "Biobank contract implemented in JavaScript",
     "main": "index.js",
     "engines": {
@@ -19,7 +19,9 @@
     "dependencies": {
         "crypto": "^1.0.1",
         "fabric-contract-api": "^2.0.0",
-        "fabric-shim": "^2.0.0"
+        "fabric-shim": "^2.0.0",
+        "node": "^15.12.0",
+        "npm-check-updates": "^11.3.0"
     },
     "devDependencies": {
         "chai": "^4.1.2",
