change account contract channel 2

--- a/blockchain/contract-channel-2/package.json
+++ b/blockchain/contract-channel-2/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "biobank-channel-2",
+    "name": "currency",
     "version": "3.0.0",
     "description": "Biobank contract implemented in JavaScript - channel 2",
     "main": "index.js",
