--- a/blockchain/test-network/docker/docker-compose-couch.yaml
+++ b/blockchain/test-network/docker/docker-compose-couch.yaml
@@ -3,15 +3,18 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-version: '2'
+version: '2.4'
 
 networks:
   test:
+    name: fabric_test
 
 services:
   couchdb0:
     container_name: couchdb0
-    image: couchdb:3.1
+    image: couchdb:3.1.1
+    labels:
+      service: hyperledger-fabric
     # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
     # for CouchDB.  This will prevent CouchDB from operating in an "Admin Party" mode.
     environment:
@@ -38,7 +41,9 @@ services:
 
   couchdb1:
     container_name: couchdb1
-    image: couchdb:3.1
+    image: couchdb:3.1.1
+    labels:
+      service: hyperledger-fabric
     # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
     # for CouchDB.  This will prevent CouchDB from operating in an "Admin Party" mode.
     environment:
