add new version

--- a/blockchain/config/core.yaml
+++ b/blockchain/config/core.yaml
@@ -230,13 +230,7 @@ peer:
             # indicates whenever state transfer is enabled or not
             # default value is true, i.e. state transfer is active
             # and takes care to sync up missing blocks allowing
-            # lagging peer to catch up to speed with rest network.
-            # Keep in mind that when peer.gossip.useLeaderElection is true
-            # and there are several peers in the organization,
-            # or peer.gossip.useLeaderElection is false alongside with
-            # peer.gossip.orgleader being false, the peer's ledger may lag behind
-            # the rest of the peers and will never catch up due to state transfer
-            # being disabled.
+            # lagging peer to catch up to speed with rest network
             enabled: false
             # checkInterval interval to check whether peer is lagging behind enough to
             # request blocks via state transfer from another peer.
@@ -259,31 +253,26 @@ peer:
     tls:
         # Require server-side TLS
         enabled:  false
-        # Require client certificates / mutual TLS for inbound connections.
+        # Require client certificates / mutual TLS.
         # Note that clients that are not configured to use a certificate will
         # fail to connect to the peer.
         clientAuthRequired: false
         # X.509 certificate used for TLS server
         cert:
             file: tls/server.crt
-        # Private key used for TLS server
+        # Private key used for TLS server (and client if clientAuthEnabled
+        # is set to true
         key:
             file: tls/server.key
-        # rootcert.file represents the trusted root certificate chain used for verifying certificates
-        # of other nodes during outbound connections.
-        # It is not required to be set, but can be used to augment the set of TLS CA certificates
-        # available from the MSPs of each channel’s configuration.
+        # Trusted root certificate chain for tls.cert
         rootcert:
             file: tls/ca.crt
-        # If mutual TLS is enabled, clientRootCAs.files contains a list of additional root certificates
-        # used for verifying certificates of client connections.
-        # It augments the set of TLS CA certificates available from the MSPs of each channel’s configuration.
-        # Minimally, set your organization's TLS CA root certificate so that the peer can receive join channel requests.
+        # Set of root certificate authorities used to verify client certificates
         clientRootCAs:
             files:
               - tls/ca.crt
-        # Private key used for TLS when making client connections.
-        # If not set, peer.tls.key.file will be used instead
+        # Private key used for TLS when making client connections.  If
+        # not set, peer.tls.key.file will be used instead
         clientKey:
             file:
         # X.509 certificate used for TLS when making client connections.
@@ -599,6 +588,8 @@ chaincode:
         _lifecycle: enable
         cscc: enable
         lscc: enable
+        escc: enable
+        vscc: enable
         qscc: enable
 
     # Logging section for the chaincode container
@@ -687,20 +678,6 @@ ledger:
     # the minimum duration (in milliseconds) between writing
     # two consecutive db batches for converting the ineligible missing data entries to eligible missing data entries
     collElgProcDbBatchesInterval: 1000
-    # The missing data entries are classified into two categories:
-    # (1) prioritized
-    # (2) deprioritized
-    # Initially, all missing data are in the prioritized list. When the
-    # reconciler is unable to fetch the missing data from other peers,
-    # the unreconciled missing data would be moved to the deprioritized list.
-    # The reconciler would retry deprioritized missing data after every
-    # deprioritizedDataReconcilerInterval (unit: minutes). Note that the
-    # interval needs to be greater than the reconcileSleepInterval
-    deprioritizedDataReconcilerInterval: 60m
-
-  snapshots:
-    # Path on the file system where peer will store ledger snapshots
-    rootDir: /var/hyperledger/production/snapshots
 
 ###############################################################################
 #
