--- a/blockchain/test-network/addOrg3/docker/docker-compose-ca-org3.yaml
+++ b/blockchain/test-network/addOrg3/docker/docker-compose-ca-org3.yaml
@@ -5,15 +5,10 @@
 
 version: '2'
 
-networks:
-  test:
-    name: fabric_test
-
 services:
+
   ca_org3:
-    image: hyperledger/fabric-ca:latest
-    labels:
-      service: hyperledger-fabric
+    image: hyperledger/fabric-ca:$IMAGE_TAG
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org3
