--- a/blockchain/biobank-contract/package.json
+++ b/blockchain/biobank-contract/package.json
@@ -1,10 +1,10 @@
 {
     "name": "biobank",
-    "version": "1.0.0",
+    "version": "12.0.0",
     "description": "Biobank contract implemented in JavaScript",
     "main": "index.js",
     "engines": {
-        "node": ">=8",
+        "node": ">=15.6",
         "npm": ">=5"
     },
     "scripts": {
@@ -20,6 +20,7 @@
         "crypto": "^1.0.1",
         "fabric-contract-api": "^2.0.0",
         "fabric-shim": "^2.0.0",
+        "jsrsasign": "^8.0.24",
         "node": "^15.12.0",
         "npm-check-updates": "^11.3.0"
     },
