--- a/blockchain/currency-contract/package.json
+++ b/blockchain/currency-contract/package.json
@@ -1,10 +1,10 @@
 {
     "name": "currency",
-    "version": "12.0.0",
+    "version": "3.0.0",
     "description": "Biobank contract implemented in JavaScript - channel 2",
     "main": "index.js",
     "engines": {
-        "node": ">=8",
+        "node": ">=15.6",
         "npm": ">=5"
     },
     "scripts": {
@@ -17,9 +17,9 @@
     "author": "Hyperledger",
     "license": "Apache-2.0",
     "dependencies": {
-        "crypto": "^1.0.1",
         "fabric-contract-api": "^2.0.0",
         "fabric-shim": "^2.0.0",
+        "jsrsasign": "^8.0.24",
         "node": "^15.12.0",
         "npm-check-updates": "^11.3.0"
     },
