--- a/blockchain/currency-contract/package.json
+++ b/blockchain/currency-contract/package.json
@@ -1,6 +1,6 @@
 {
     "name": "currency",
-    "version": "25.0.0",
+    "version": "19.0.0",
     "description": "Biobank contract implemented in JavaScript - channel 2",
     "main": "index.js",
     "engines": {
@@ -17,6 +17,7 @@
     "author": "Hyperledger",
     "license": "Apache-2.0",
     "dependencies": {
+        "dinero.js": "^1.8.1",
         "fabric-contract-api": "^2.0.0",
         "fabric-shim": "^2.0.0",
         "jsrsasign": "^8.0.24",
