Preço unitario do block é definido

--- a/blockchain/currency-contract/config.json
+++ b/blockchain/currency-contract/config.json
@@ -9,5 +9,7 @@
 
   "defaultCurrency": "BIO",
   "defaultPrecision": 9,
-  "globalFormat": "0.000000000"
+  "globalFormat": "0.000000000",
+
+  "blockPrice": 1000
 }
