--- a/blockchain/currency-contract/config.json
+++ b/blockchain/currency-contract/config.json
@@ -1,11 +1,11 @@
 {
-  "walletPath":  ".fabric-vscode/environments/testNetwork/wallets/Org1",
-  "identityName": "Org1 Admin",
-  "connectionProfilePath":".fabric-vscode/v2/environments/1 Org Local Fabric/gateways/Org1 Gateway.json",
+  "__walletPath":  ".fabric-vscode/environments/testNetwork/wallets/Org1",
+  "__identityName": "Org1 Admin",
+  "__connectionProfilePath":".fabric-vscode/v2/environments/1 Org Local Fabric/gateways/Org1 Gateway.json",
 
-  "__walletPath": "Desktop/poli/biobank/application/fabric-details/wallet",
-  "__identityName": "admin",
-  "__connectionProfilePath": "Desktop/poli/biobank/blockchain/test-network/organizations/peerOrganizations/org1.example.com/connection-org1.json",
+  "walletPath": "biobank/application/fabric-details/wallet",
+  "identityName": "admin",
+  "connectionProfilePath": "/biobank/blockchain/test-network/organizations/peerOrganizations/org1.example.com/connection-org1.json",
 
   "defaultCurrency": "BIO",
   "defaultPrecision": 9,
