change: external endpoint to amazoniaweb dns

--- a/blockchain/test-network/organizations/cryptogen/crypto-config-orderer.yaml
+++ b/blockchain/test-network/organizations/cryptogen/crypto-config-orderer.yaml
@@ -20,3 +20,5 @@ OrdererOrgs:
       - Hostname: orderer
         SANS:
           - localhost
+          - amazoniaweb.duckdns.org
+          - hyperledger.larc.usp.br
