--- a/blockchain/test-network/docker/docker-compose-ca.yaml
+++ b/blockchain/test-network/docker/docker-compose-ca.yaml
@@ -20,10 +20,10 @@ services:
       - FABRIC_CA_SERVER_CA_NAME=ca-org1
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=7054
-      - SANS_HOSTNAMES=amazoniaweb.duckdns.org,hyperledger.larc.usp.br
+      - SANS_HOSTNAMES=amazoniaweb.duckdns.org,hyperledger.larc.usp.br,localhost
     ports:
       - "7054:7054"
-    command: sh -c 'fabric-ca-server start -b admin:adminpw --csr.hosts $SANS_HOSTNAMES -d'
+    command: sh -c 'fabric-ca-server start -b admin:adminpw -d --csr.hosts '${SANS_HOSTNAMES}''
     volumes:
       - ../organizations/fabric-ca/org1:/etc/hyperledger/fabric-ca-server
     container_name: ca_org1
@@ -39,10 +39,10 @@ services:
       - FABRIC_CA_SERVER_CA_NAME=ca-org2
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=8054
-      - SANS_HOSTNAMES=amazoniaweb.duckdns.org,hyperledger.larc.usp.br
+      - SANS_HOSTNAMES=amazoniaweb.duckdns.org,hyperledger.larc.usp.br,localhost
     ports:
       - "8054:8054"
-    command: sh -c 'fabric-ca-server start -b admin:adminpw --csr.hosts $SANS_HOSTNAMES -d'
+    command: sh -c 'fabric-ca-server start -b admin:adminpw -d --csr.hosts '${SANS_HOSTNAMES}''
     volumes:
       - ../organizations/fabric-ca/org2:/etc/hyperledger/fabric-ca-server
     container_name: ca_org2
@@ -58,10 +58,10 @@ services:
       - FABRIC_CA_SERVER_CA_NAME=ca-orderer
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=9054
-      - SANS_HOSTNAMES=amazoniaweb.duckdns.org,hyperledger.larc.usp.br
+      - SANS_HOSTNAMES=amazoniaweb.duckdns.org,hyperledger.larc.usp.br,localhost
     ports:
       - "9054:9054"
-    command: sh -c 'fabric-ca-server start -b admin:adminpw --csr.hosts $SANS_HOSTNAMES -d'
+    command: sh -c 'fabric-ca-server start -b admin:adminpw -d --csr.hosts '${SANS_HOSTNAMES}''
     volumes:
       - ../organizations/fabric-ca/ordererOrg:/etc/hyperledger/fabric-ca-server
     container_name: ca_orderer
