payment Distribution validation

--- a/blockchain/biobank-contract/config.json
+++ b/blockchain/biobank-contract/config.json
@@ -9,5 +9,24 @@
 
   "defaultCurrency": "BIO",
   "defaultPrecision": 9,
-  "globalFormat": "0.000000000"
+  "globalFormat": "0.000000000",
+
+  "dnaContract": {
+    "collector": {
+      "min": 0,
+      "max": 70
+    },
+    "processor": {
+      "min": 10,
+      "max": 70
+    },
+    "validators": {
+      "min": 10,
+      "max": 70
+    },
+    "curator": {
+      "min": 10,
+      "max": 70
+    }
+  }
 }
