--- a/application/package.json
+++ b/application/package.json
@@ -22,6 +22,7 @@
     "express-session": "1.17.0",
     "hbs": "4.1.0",
     "method-override": "3.0.0",
-    "morgan": "1.9.1"
+    "morgan": "1.9.1",
+    "nodemon": "^2.0.12"
   }
 }
