--- a/blockchain/currency-contract/config.json
+++ b/blockchain/currency-contract/config.json
@@ -1,6 +1,6 @@
 {
   "walletPath":  ".fabric-vscode/environments/testNetwork/wallets/Org1",
-  "identityName": "Org1 Admin",
+  "identityName": "vinicius",
   "connectionProfilePath":".fabric-vscode/v2/environments/1 Org Local Fabric/gateways/Org1 Gateway.json",
 
   "__walletPath": "biobank/application/fabric-details/wallet",
