--- a/application/package.json
+++ b/application/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "connect-flash": "^0.1.1",
     "dinero.js": "^1.8.1",
+    "dotenv": "^10.0.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "fabric-network": "^2.2.0",
