--- a/application/package.json
+++ b/application/package.json
@@ -16,13 +16,14 @@
     "express": "^4.17.1",
     "fabric-network": "^2.2.0",
     "formidable": "^1.2.2",
-    "jsrsasign": "^8.0.24",
+    "jsrsasign": "^10.5.1",
     "magnet-uri": "^5.3.0",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "express-session": "1.17.0",
-    "hbs": "4.1.0",
+    "hbs": "^4.2.0",
     "method-override": "3.0.0",
     "morgan": "1.9.1",
     "nodemon": "^2.0.12"
