--- a/application/package.json
+++ b/application/package.json
@@ -18,7 +18,8 @@
     ],
     "targets": [
       "node14-linux-x64",
-      "node14-win-x64"
+      "node14-win-x64",
+      "node14-macos-x64"
     ],
     "outputPath": "./executables"
   },
