--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ application/fabric-details/remote-certs/remoteAppUser.id
 blockchain/currency-contract/config.json
 blockchain/biobank-contract/config.json
 blockchain/currency-contract/package-lock.json
+application/package-lock.json
