--- a/application/package.json
+++ b/application/package.json
@@ -15,11 +15,12 @@
       "views/**/*",
       "public/**/*",
       ".env",
-      "encryptCertificate/**/*"
+      "encryptCertificate/**/*",
+      "build/**/*"
     ],
     "targets": [
-      "node14-linux-x64",
-      "node14-win-x64"
+      "node16-linux-x64",
+      "node16-win-x64"
     ],
     "outputPath": "./executables"
   },
@@ -27,7 +28,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.0",
+    "bindings": "~1.2.1",
     "connect-flash": "^0.1.1",
+    "crypto-js": "^4.0.0",
     "dinero.js": "^1.8.1",
     "dotenv": "^10.0.0",
     "errorhandler": "^1.5.1",
@@ -37,13 +40,11 @@
     "formidable": "^1.2.2",
     "jsrsasign": "^8.0.24",
     "magnet-uri": "^5.3.0",
-    "pkg": "^5.5.2",
-    "pug": "^3.0.0",
-    "uuid": "^8.3.2",
-    "bindings": "~1.2.1",
-    "crypto-js": "^4.0.0",
     "node-addon-api": "^5.0.0",
-    "node-gyp": "^9.0.0"
+    "node-gyp": "^9.0.0",
+    "pkg": "^5.8.0",
+    "pug": "^3.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "express-session": "1.17.0",
