:sparkles: Added AmazoniaWeb link in login

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ node_modules/
 application/fabric-details/remote-connection.json
 application/fabric-details/remote-certs/remoteadmin.id
 application/fabric-details/remote-certs/remoteAppUser.id
+application/encryptCertificate/binding.gyp
+application/encryptCertificate/build/
 blockchain/currency-contract/config.json
 blockchain/biobank-contract/config.json
 blockchain/currency-contract/package-lock.json
