--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ blockchain/currency-contract/package-lock.json
 application/.env
 application/package-lock.json
 blockchain/currency-contract/config.json
+encryptCertificate/build
+blockchain/biobank-contract/package-lock.json
+blockchain/currency-contract/package-lock.json
