--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ application/fabric-details/remote-certs/remoteadmin.id
 application/fabric-details/remote-certs/remoteAppUser.id
 application/encryptCertificate/binding.gyp
 application/encryptCertificate/build/
+application/encryptCertificate/credentials/
 blockchain/currency-contract/config.json
 blockchain/biobank-contract/config.json
 blockchain/currency-contract/package-lock.json
