--- a/blockchain/currency-contract/config.json
+++ b/blockchain/currency-contract/config.json
@@ -1,11 +1,11 @@
 {
-  "_walletPath":  ".fabric-vscode/environments/testNetwork/wallets/Org1",
-  "_identityName": "Org1 Admin",
-  "_connectionProfilePath":".fabric-vscode/v2/environments/1 Org Local Fabric/gateways/Org1 Gateway.json",
+  "walletPath":  ".fabric-vscode/v2/environments/biobank/wallets/Org1",
+  "identityName": "Org1 Admin",
+  "connectionProfilePath":".fabric-vscode/v2/environments/biobank/gateways/Org1 Gateway.json",
 
-  "walletPath": "biobank/application/fabric-details/wallet",
-  "identityName": "admin",
-  "connectionProfilePath": "/biobank/blockchain/test-network/organizations/peerOrganizations/org1.example.com/connection-org1.json",
+  "_walletPath": "biobank/application/fabric-details/wallet",
+  "_identityName": "admin",
+  "_connectionProfilePath": "/biobank/blockchain/test-network/organizations/peerOrganizations/org1.example.com/connection-org1.json",
 
   "defaultCurrency": "BIO",
   "defaultPrecision": 9,
